--- a/index.htm
+++ b/index.htm
@@ -1336,9 +1336,6 @@ html, body, #root { margin: 0; padding: 0; }
                     </div>
                   </div>
 
-                  <div className="rounded-lg overflow-hidden aspect-[5/2] mb-3">
-                    <img src="https://placedog.net/500/200?id=260" alt="Payment visual" loading="lazy" className="w-full h-full object-cover" />
-                  </div>
 
                   <div className="mb-4">
                     <p className="text-sm">Order Total</p>
@@ -1408,6 +1405,9 @@ html, body, #root { margin: 0; padding: 0; }
                   </div>
                   <h2 className="text-xl sm:text-2xl font-bold text-[var(--accent)]">Thank You!</h2>
                   <p className="mt-2">Your order has been placed successfully.</p>
+                  <p className="mt-2 text-sm text-gray-700">
+                    <span className="font-semibold text-emerald-700">+50 Paw-Coins</span> on next checkout <span className="text-gray-500">(1 Paw Coin = ₹1)</span>
+                  </p>
                   <p className="text-sm mt-2">Estimated delivery: 3–5 days</p>
                   <div className="mt-4"><OutlineBtn onClick={() => { setPage('landing'); setHistory([]); }}>Back to Home</OutlineBtn></div>
                 </section>
